Fix alignment of background image in mobile menu

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -367,6 +367,7 @@ html.sticky .logo a {
     }
 
     .main-navigation ul:hover {
+        background-position: right 1em top;
         background-size: 30px;
         padding-top: 1.5em;
     }
